@@ -1,5 +1,11 @@
 2009-01-06  Daniel Elstner  <danielk@openismus.com>
 
+	* Makefile.am (cluttermm_docdir): Rename from clutter_docdir and
+	change the path to point to the cluttermm-0.9 documentation instead
+	of the clutter one.
+
+2009-01-06  Daniel Elstner  <danielk@openismus.com>
+
 	* docs/tutorial/cluttermm-tut.xml: Rework the Clutter tutorial for
 	the Cluttermm API.
 
